--- a/ConsoleAppTest/ConsoleAppTest.csproj
+++ b/ConsoleAppTest/ConsoleAppTest.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Realm\Realm.csproj" />
+    <PackageReference Include="srp" Version="1.0.7" />
   </ItemGroup>
 
 </Project>
