--- a/GameServer/GameServer.csproj
+++ b/GameServer/GameServer.csproj
@@ -4,16 +4,16 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UserSecretsId>dotnet-RealmSrv-1ebb9e40-74cf-4f58-9e48-317379d58718</UserSecretsId>
+    <UserSecretsId>dotnet-GameServer-6143e308-164f-418c-badf-e60ef080641c</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.0.1" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
-    <PackageReference Include="srp" Version="1.0.7" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\WS.Domain\WS.Domain.csproj" />
     <ProjectReference Include="..\WS.Tcp\WS.Tcp.csproj" />
   </ItemGroup>
 </Project>
